# NewsLetter_Backend_in_Rust

./: Cargo.toml  Dockerfile  configuration.yaml  sqlx-data.json
scripts/: dummy.sh  init_db.sh
scripts/migrations/: 20240528170453_create_subscriptions_table.sql
src/: configuration.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/routes/: mod.rs  subscrptions.rs
tests/: health_check.rs  health_check_test.rs
