[package]
name = "NewsLetter_Backend_in_Rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.0"
clippy = "0.0.302"
tokio = { version = "1.37.0", features = ["rt", "rt-multi-thread", "macros"] }
serde = {version = "1.0.203",features = ["derive"]}
config = "0.11.0"
uuid = {version = "0.8.1",features = ["v4"]}
chrono = "0.4.15"

#using table like toml syntax
[dependencies.sqlx]
    version = "0.5.7"
    default-features = false
    features = ["runtime-actix-rustls","macros","postgres","uuid","chrono","migrate"]

[dev-dependencies]
reqwest = "0.12.4"

[lib]
path = "src/lib.rs"
name = "zero2prodLibrary"

[[bin]]
path = "src/main.rs"
name = "zero2prod"
